force-app/main/default/objects/rh2__RH_Job__c/rh2__RH_Job__c.object-meta.xml
<CustomObject>
    <label>Rollup Job</label>
    <nameField>
        <displayFormat>J-{0000}</displayFormat>
        <label>Rollup Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rollup Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>