force-app/main/default/objects/rh2__RH_Job__c/fields/rh2__Active__c.field-meta.xml
<CustomField>
    <fullName>rh2__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>