force-app/main/default/objects/rh2__RH_Job__c/fields/rh2__PreviousFireTime__c.field-meta.xml
<CustomField>
    <fullName>rh2__PreviousFireTime__c</fullName>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>