force-app/main/default/objects/rh2__RH_Job__c/fields/rh2__Rollup_Name__c.field-meta.xml
<CustomField>
    <fullName>rh2__Rollup_Name__c</fullName>
    <label>Rollup Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>