force-app/main/default/objects/rh2__RH_Job__c/fields/rh2__Rollup_Status__c.field-meta.xml
<CustomField>
    <fullName>rh2__Rollup_Status__c</fullName>
    <label>Rollup Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>