force-app/main/default/objects/rh2__RH_Job__c/fields/rh2__RunForAllRecords__c.field-meta.xml
<CustomField>
    <fullName>rh2__RunForAllRecords__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RunForAllRecords</label>
    <type>Checkbox</type>
</CustomField>