force-app/main/default/objects/rh2__RH_Job__c/fields/rh2__Schedule_Name__c.field-meta.xml
<CustomField>
    <fullName>rh2__Schedule_Name__c</fullName>
    <label>Schedule Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>