force-app/main/default/objects/rh2__RH_Job__c/validationRules/rh2__Positive_Increment.validationRule-meta.xml
<ValidationRule>
    <fullName>rh2__Positive_Increment</fullName>
    <active>true</active>
    <errorConditionFormula>rh2__Increment__c &lt; 1</errorConditionFormula>
    <errorDisplayField>rh2__Increment__c</errorDisplayField>
    <errorMessage>Must enter a value that is greater than or equal to 1.</errorMessage>
</ValidationRule>