force-app/main/default/objects/rh2__RH_Job__c/listViews/rh2__All.listView-meta.xml
<ListView>
    <fullName>rh2__All</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>rh2__Rollup_Name__c</columns>
    <columns>rh2__Active__c</columns>
    <columns>rh2__PreviousFireTime__c</columns>
    <columns>rh2__NextFireTime__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>